# WinGrep

./: .gitignore  CMakeLists.txt  README.md  file_reader.cpp  file_reader.hpp  grep.cpp  grep.hpp  grep_utils.cpp  grep_utils.hpp  main.cpp  test.txt
test_directory/: test.txt
test_directory/test_embedded/: test.txt
